--- a/deeplink1.html
+++ b/deeplink1.html
@@ -3,14 +3,14 @@
   <head>
     <title>Redirecting...</title>
    <meta http-equiv="refresh" content="1;url=zumigo://pet/home" />
-    <script type="text/javascript">
-      // First redirect to AutoService
-      window.location.href = "myapp://auto-service";
+    <script >
+      // // First redirect to AutoService
+      // window.location.href = "myapp://auto-service";
 
       // After 2 seconds, redirect to the Registration page
-      setTimeout(() => {
-        window.location.href = "myapp://register"; // Redirect to Registration page after AutoService
-      }, 2000);
+      // setTimeout(() => {
+      //   window.location.href = "myapp://register"; // Redirect to Registration page after AutoService
+      // }, 2000);
 
       // Fallback to Play Store if the app is not installed
       setTimeout(() => {
